fixing mobile styles margins and spacing

--- a/css/section_main.css
+++ b/css/section_main.css
@@ -14,6 +14,7 @@
     background-image: url('../images/bg-section-top-mobile-2.svg');
 } .wave--bottom-1 {
     background-image: url('../images/bg-section-bottom-mobile-1.svg');
+    background-size: inherit;
 }.wave--bottom-2 {
     background-image: url('../images/bg-section-bottom-mobile-2.svg');
 }
@@ -47,6 +48,10 @@
     font-size: 13px;
     margin: 12px 0 35px 0;
     line-height: 20px;
+}
+
+.main__card__text--flowing {
+    margin-bottom: 80px;
 }
 
 .subtitle {
